[package]
name = "gitql"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.11.3"
tide = "0.8.1"
async-std = "1.5.0"
async-graphql-tide = "1.13.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
git2 = "0.13.6"
slug = "0.1.4"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
