[package]
name = "gitql"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.0"
clap = { version = "4.0.27", features = ["derive"] }
git2 = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["tracing", "macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
